[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
bs58 = "0.5.0"
clap = "4.4.6"
ed25519-dalek = { version = "2.0.0", features = ["rand_core"] }
keyring = "2.0.5"
rand = "0.8.5"
reqwest = { version = "0.11.22", features = ["blocking"] }
serde = "1.0.189"
serde_derive = "1.0.189"
serde_json = "1.0.107"
shared = { path = "../shared" }
tempfile = "3.8.0"
url = { version = "*", features = ["serde"] }
zeroize = "1.6.0"
