[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
bs58 = "0.5.0"
bytes = "1.5.0"
ed25519-dalek = { version = "2.0.0", features = ["digest"] }
futures-util = "0.3.28"
http = "0.2.9"
log4rs = "1.2.0"
once_cell = "1.18.0"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
shared = { path = "../shared" }
tokio = { version = "1.33.0", features = ["fs", "macros", "rt-multi-thread", "signal"] }
tokio-util = "0.7.9"
warp = { version = "0.3.6", features = ["compression"] }
rand = "0.8.5"
log = "0.4.20"
